// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finished Badge should be rendered if multiple opIndexes 1`] = `
<div
  style={Object {}}
>
  <span>
    <button
      className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "fontSize": "1.5em",
          "margin": "5px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        M
      </span>
    </button>
  </span>
  <span>
     Congratulations on getting a new Silver Badge for Level A Mixed Addition / Subtraction!
  </span>
</div>
`;

exports[`Finished Badge should be rendered on happy path 1`] = `
<div
  style={Object {}}
>
  <span>
    <button
      className="MuiButtonBase-root MuiFab-root MuiFab-sizeMedium MuiFab-primary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "fontSize": "1.5em",
          "margin": "5px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        +
      </span>
    </button>
  </span>
  <span>
     Congratulations on getting a new Silver Badge for Level A Addition!
  </span>
</div>
`;

exports[`Finished Badge should not be rendered if correct answers under 10 1`] = `
<div
  style={Object {}}
>
  You need 10 or more correct answers to earn a badge. On this 
test you got 9 answer(s) correct.
</div>
`;
